cif/org.eclipse.escet.cif.tests/tests/checks/ExprNoSpecificUnaryExprsCheckLevel0.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ---------------------------------
  (1/4) Unary operator "+" is used.
  ---------------------------------
   * In group "PLUS_INTS_RANGED":
     - invariant 1 = +1;
                     ^
   * In automaton "PLUS_INTS_RANGELESS":
     - invariant v = +v;
                     ^
   * In group "PLUS_REALS":
     - invariant 1.0 = +1.0;
                       ^

  ---------------------------------
  (2/4) Unary operator "-" is used.
  ---------------------------------
   * In group "NEGATE_INTS_RANGED":
     - invariant 1 = -1;
                     ^
   * In automaton "NEGATE_INTS_RANGELESS":
     - invariant v = -v;
                     ^
   * In group "NEGATE_INTS_REALS":
     - invariant 1.0 = -1.0;
                       ^

  -----------------------------------
  (3/4) Unary operator "not" is used.
  -----------------------------------
   * In the top-level scope of the specification:
     - invariant not true;
                 ^
   * In group "INVERSE":
     - invariant not true;
                 ^
     - invariant not not false;
                 ^   ^
   * In group "grp":
     - invariant not true;
                 ^
   * In group "nested_grp.nested_grp":
     - invariant not true;
                 ^
   * In group "type_decl":
     - invariant not a;
                 ^

  --------------------------------------
  (4/4) Unary operator "sample" is used.
  --------------------------------------
   * In automaton "SAMPLE":
     - invariant (sample d)[0] > 0;
                  ^
